...
        android:id="@+id/kosong"
        android:title="@string/kosong"
        android:icon="@android:color/transparent"
        app:showAsAction="never"/> <!-- Item kosong disembunyikan -->

    <item
        android:id="@+id/faq"
        android:title="@string/faq"
        android:icon="@drawable/quiz"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/chat"
...
